--- a/HTMLbasic.html
+++ b/HTMLbasic.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title></title>
 </head>
 <body>
-<h1>This is a Joni</h1>
-<p>This is my Nth html page on web app.</p>
+<h1>Hei, maailma. Olen Joni</h1>
+<p>En ole ihan hetkeen html:ää näppäillyt, enkä gittiä, mutta kyllä tämä tästä muistuu pian!</p>
+  <p>
+    Nokkela tää Gitin, edit in place ominaisuus!
+  </p>
 </body>
 </html>
