css changes, non effective

--- a/CSS Basics/index.html
+++ b/CSS Basics/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <nav>
+        <a href="second.html">Second One, click here!</a>
+    </nav>
     <h1 class="header-example"> The Header </h1>
     <p class="color-example">Let's see here</p>
     <ul class="list-example">
@@ -15,5 +18,6 @@
     </ul>
     <p class="text-example">This is a paragraph</p>
     <div class="div-example">The divider</div>
+    
 </body>
 </html>
