css fixed, broke the old assignements, for sure!

--- a/CSS Basics/second.html
+++ b/CSS Basics/second.html
@@ -9,7 +9,7 @@
         <nav>
             <a href="index.html">Main page</a>
         </nav>
-        <h1 class="header-example">The Second One</h1>
+        <h1 class="flashy-header">The Second One</h1>
         <p class="text-example">
             Lorem ipsum dolor sit imam
         </p>
@@ -17,9 +17,14 @@
             <img src="RGB_color_wheel_12.svg" alt="RGB color wheel">
             <figcaption>RGB color wheel. Source: Wikimedia. License: CC:0</figcaption>
         </figure>
+
         <hr>
         <label for="file">Resources:</label>
         <progress id="file" value="11" max="100">low</progress>
         <hr>
+        
+        <p class="flashy-para">
+            What goes in here is a nice and flashy paragraph!
+        </p>
     </body>
 </html>
